# GRMusic

./: .gitignore  README.md  app.py  bot.db  bot.py  db.sqlite3  log.txt  main.py  music.py  pyproject.toml  requirements.txt  web-music.html
TEMP/: Cookies  cookies.sqlite
core/: filter.py  parse_cookies.py  parse_exception.py  telegram.py  token.py  yandex_music_download.py  yandex_music_parse_id.py  yandex_parse_id.py  yandex_parse_page.py
grteammusicbot/: __main__.py  logger.py
grteammusicbot/core/: filter.py  parse_cookies.py  telegram.py  yandex_music_download.py  yandex_music_parse_id.py
