[tool.poetry]
name = "grteammusicbot"
version = "0.1.0"
description = "Telegram bot @gr_team_music_bot for download music from Yandex Music"
authors = ["GRTeamBoss <rabbitwow97@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "grteammusicbot"}]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPIi = "==4.8.0"
requests = "==2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
